[project]
name = "goit-pythonweb-hw-04"
version = "0.1.0"
description = "home work"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "aiopath (>=0.7.7,<0.8.0)",
    "aioshutil (>=1.5,<2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
